--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -10,7 +10,7 @@
     debido a que el litio es un material altamente reactivo,
     es necesario que el proceso de carga se realice de manera correcta.
     
-    En este informe se hará una descripcion de las decisiones tomadas durante la etapa de diseño,
+    En este informe se hará una descripción de las decisiones tomadas durante la etapa de diseño,
     detallando tanto sobre los avances como los problemas enfrentados,
     junto con las respectivas soluciones propuestas. 
 
