--- a/biblio.bib
+++ b/biblio.bib
@@ -25,7 +25,7 @@
   edition   = {3}
 }
 
-@article{bateria,
+@article{modelo_bateria_1,
   author  = {Ahmad Rahmoun and Helmuth Biechl},
   journal = {PRZEGLAD ELEKTROTECHNICZNY},
   title   = {Modelling of Li-ion batteries using equivalent circuit diagrams},
@@ -33,7 +33,7 @@
   url     = {http://pe.org.pl/articles/2012/7b/40.pdf}
 }
 
-@article{bateria_espanol,
+@article{modelo_bateria_2,
   author  = {R. Iglesias and A. Lago and A. Nogueiras and C. Martínez-Peñalver and J. Marcos and C. Quintans and M.J. Moure and M.D. Valdés },
   journal = {Departamento de Tecnología Electrónica, Universidad de Vigo},
   title   = {Modelado y Simulación de una Batería de Ion-Litio Comercial Multicelda},
@@ -48,6 +48,15 @@
   number       = {NCR18650GA},
   year         = {2015},
   month        = {4}
+}
+
+@manual{icr18650s3,
+  organization = {LG Chem},
+  title        = {Lithium Ion Battery},
+  url          = {https://www.tme.eu/Document/851884e7c9339fa73b5bf66663baac51/ACCU-ICR18650-2.2.pdf},
+  number       = {ICR18650 S3},
+  year         = {2007},
+  month        = {5}
 }
 
 @misc{ltspice,
