--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -28,11 +28,11 @@ a desarrollar y sus tiempos correspondientes.
             \gantttitle{Nov}{4} \\
 
             %tareas
-            \ganttbar{Diseño e investigación}{1}{10} \\
-            \ganttbar{Informe parcial}{9}{11} \\
-            \ganttbar{Implementación}{11}{18} \\
-            \ganttbar{Validación}{16}{21} \\
-            \ganttbar{Informe final}{21}{28}
+            \ganttbar[progress=90]{Diseño e investigación}{1}{10} \\
+            \ganttbar[progress=80]{Informe parcial}{9}{11} \\
+            \ganttbar[progress=0]{Implementación}{11}{18} \\
+            \ganttbar[progress=0]{Validación}{16}{21} \\
+            \ganttbar[progress=0]{Informe final}{21}{28}
 
         \end{ganttchart}
     \end{center}
