--- a/sections/actividades.tex
+++ b/sections/actividades.tex
@@ -1,42 +1,24 @@
 \section{Actividades y Metodología}
 
-%Localización física y ubicación de instalaciones:
+De acuerdo con los requerimientos del proyecto y con el fin de capacitarse, se estudiaron y analizaron aspectos de seguridad, 
+curvas de carga de la batería y topologías de conversores de potencia.
+En todos los casos se evaluaron las diferentes alternativas posibles y, en base a su complejidad y a su costo,
+se eligió la solución más adecuada para el logro de los objetivos. 
+En base a los resultados obtenidos mediante las simulaciones, las etapas de estudio y diseño no fueron secuenciales. 
 
-El proyecto se llevará a cabo en la Facultad de Ingeniería de la Universidad Nacional de La Plata.
-Los ensayos necesarios se realizarán en el Área Técnica de Electrónica e Instrumental (ATEI)
-del Departamento de Electrotecnia de la Facultad de Ingeniería de la UNLP.
-Se realizarán consultas semanales con el tutor para el seguimiento del desarrollo del proyecto y
-revisión de las decisiones tomadas por el equipo de trabajo.
-
-Para alcanzar las metas y los objetivos propuestos, se realizarán las siguientes actividades:
-
-\subsection{Estudio de bibliografía y diseño} \label{subsection:estudio_bibliografia}
-Con el objetivo de capacitarse, se estudiarán y analizarán aspectos de seguridad, curvas de carga de la batería 
-y topologías de conversores de potencia, de acuerdo con los requerimientos del proyecto. 
-Se evaluarán las diferentes alternativas posibles y, en base a su complejidad y a su costo,
-se elegirá la solución más adecuada para el logro de los objetivos. 
-
-Se realizarán simulaciones en SPICE (programa de simulación con énfasis en circuitos integrados),
-separando el proceso en 4 partes:
-\begin{itemize}
-    \item Fuente conmutada: Convierte la tensión alterna de la red doméstica en una tensión continua.
-    \item Fuente de corriente: Brinda una corriente constante a la batería durante la primera etapa de carga.
-    \item Circuito de control: Alterna entre las etapas de carga.
-    \item Circuito de protección: Protege a la batería en caso de cortocircuito.
-\end{itemize}
-
-En la Figura \ref{fig:esquema_cargador} se puede observar un esquema en bloques del cargador.
+En la figura \ref{fig:esquema_cargador} se puede observar un esquema en bloques del cargador.
 El circuito de la fuente conmutada está compuesto por los bloques de rectificación, filtrado y conversión DC-DC.
 El controlador se encarga de generar una señal PWM en base a la tensión y la corriente de la batería.
 La referencia es una señal de corriente ya que la tensión nominal del cargador es fija.
 El circuito de protección está integrado en el bloque de control.
 
-Para disminuir las pérdidas de potencia en la etapa de corriente constante y obtener una mayor eficiencia, se modificó la estructura del cargador con respecto al diseño original. 
+Para disminuir las pérdidas de potencia en la etapa de corriente constante y obtener una mayor eficiencia,
+se modificó la estructura del cargador con respecto al diseño original. 
 En primera instancia, para mantener la tensión a la salida del conversor en 42V, se propuso un ciclo de trabajo constante 
 con el cual la caída de tensión en la etapa de control de corriente generaba una disipación de potencia excesiva.
-Modificando el circuito de conversión que controla tanto la corriente como la tensión se evita una etapa posterior limitadora de corriente.
+Modificando el circuito de conversión que controla tanto la corriente como la tensión
+se evita una etapa posterior limitadora de corriente.
 
-%incluir esquema de cargador
 \begin{figure}
     \centering
     \includegraphics[width=\textwidth]{images/esquema_cargador_v2.png}
@@ -44,13 +26,16 @@ Modificando el circuito de conversión que controla tanto la corriente como la t
     \label{fig:esquema_cargador}
 \end{figure}
 
-Se realizará un análisis crítico de las primeras simulaciones y, en base a los resultados obtenidos, 
-se corregirán los circuitos propuestos. 
-Esta etapa finaliza con la presentación del informe parcial. 
+\subsection{Ensayos realizados}
+Con el objetivo de conocer en profundidad cada una de las etapas del proceso de carga,
+a partir de una antigua batería de notebook provista por la cátedra
+se realizaron ensayos en el ATEI con sus celdas modelo LGAAS31865 \cite{icr18650s3}.
+Los ensayos de carga y descarga fueron realizados en base a la hoja de datos
+del fabricante de una celda similar modelo NCR18650GA.
 
 \subsection{Simulaciones}
-El circuito fue diseñado y probado en LTspice \cite{ltspice}, con el fin de verificar el diseño.
-El proceso podría dividirse en las siguientes etapas:
+Para verificar el diseño realizado el circuito fue probado en LTspice \cite{ltspice}.
+El proceso se divide en las siguientes etapas:
 \begin{enumerate}
     \item Simulación del conversor.
     \item Simulación del rectificador de entrada.
@@ -64,21 +49,27 @@ enumerando los problemas encontrados y las soluciones propuestas.
 \subsubsection{Simulación del conversor DC-DC}
 El primer paso de diseño fue la elección de una topología de conversión DC-DC.
 Esta etapa introduce aislación a partir de un transformador de alta frecuencia,
-disminuyendo el coste, tamaño y peso respecto a uno de baja frecuencia en base al núcleo magnético necesario.
-Como se requiere una única tensión de salida se evita utilizar múltiples devanados.
-El conversor debe alcanzar una potencia máxima de 300W y debe ser lo más sencillo posible para evitar un costo elevado. 
+disminuyendo el coste, tamaño y peso respecto a uno de baja frecuencia en base
+al núcleo magnético necesario. Como se requiere una única tensión de salida se
+evita utilizar múltiples devanados. El conversor debe alcanzar una potencia
+máxima de 300W y debe ser lo más sencillo posible para evitar un costo elevado. 
 
 La topología flyback es de baja complejidad al estar integrada por muy pocos componentes. 
 Como desventajas, el tamaño del núcleo del transformador se incrementa con la potencia requerida y en bornes del
 interruptor presenta una tensión igual al doble de la tensión máxima de entrada.
 En aplicaciones típicas se alcanzar valores de hasta 150W.
 
-La topología forward con un solo switch disminuye el tamaño del núcleo del transformador ya que la energía no necesita almacenarse en el entrehierro.
-Como desventajas, al igual que el flyback presenta alta tensión en bornes del interruptor y se eleva el costo debido al agregado de la bobina de filtrado.
-La topología forward con dos switches reduce la tensión en bornes del interruptor a la mitad respecto a la de un solo switch (y con ello la disipación de potencia por switch), 
-pero el circuito de excitación de uno de los transistores queda flotante respecto a masa. 
-La topología con un solo switch admite una potencia de salida entre 150-250W y con 2 switches se eleva a 500W \cite{mohan}\cite{hart}. 
-En base a los criterios definidos inicialmente se eligió el conversor forward con dos switches como topología de conversión DC-DC. 
+La topología forward con un solo switch disminuye el tamaño del núcleo del
+transformador ya que la energía no necesita almacenarse en el entrehierro. Como
+desventajas, al igual que el flyback presenta alta tensión en bornes del
+interruptor y se eleva el costo debido al agregado de la bobina de filtrado. La
+topología forward con dos switches reduce la tensión en bornes del interruptor a
+la mitad respecto a la de un solo switch (y con ello la disipación de potencia
+por switch), pero el circuito de excitación de uno de los transistores queda
+flotante respecto a masa. La topología con un solo switch admite una potencia de
+salida entre 150-250W y con 2 switches se eleva a 500W \cite{mohan}\cite{hart}.
+En base a los criterios definidos inicialmente se eligió el conversor forward
+con dos switches como topología de conversión DC-DC. 
 
 El principal problema que presentó la utilización de este conversor fue que las señales que controlan a los switches son poco convencionales.
 
@@ -92,9 +83,11 @@ Si bien el rectificador de media onda es más simple ya que cuenta con un menor 
 existen muchas ventajas del rectificador de onda completa frente al de media onda. 
 La primera de ellas es que la corriente media del generador de alterna(alimentación) es nula,
 lo cual beneficia a los transformadores. 
-La segunda se basa en el hecho de que para una misma carga, la tensión de rizado pico a pico para el rectificador de onda completa
+La segunda se basa en el hecho de que para una misma carga,
+la tensión de rizado pico a pico para el rectificador de onda completa
 es aproximadamente la mitad que para el rectificador de media onda. 
-Esto se debe a que en el circuito de onda completa, el tiempo durante el que se descarga el capacitor es menor que en el circuito de media onda
+Esto se debe a que en el circuito de onda completa,
+el tiempo durante el que se descarga el capacitor es menor que en el circuito de media onda
 debido a la onda sinusoidal rectificada de la segunda mitad de cada período. 
 Por todos estos motivos se decidió implementar un rectificador de onda completa.
 
@@ -124,21 +117,27 @@ Para disminuir el número de componentes se decidió utilizar únicamente un cap
 \paragraph{Rectificación controlada}
 
 Los tiristores son interruptores electrónicos controlados que son activados por una señal externa. 
-Poseen 3 terminales: ánodo, cátodo y puerta. Presentan altos valores nominales de corriente y tensión. Soportan altas corrientes y altas tensiones de bloqueo. 
-Un ejemplo de tiristores con los rectificadores controlados de silicio(SCR). Para que conduzcan se los debe polarizar en directa y deben recibir una corriente de puerta. 
+Poseen 3 terminales: ánodo, cátodo y puerta. Presentan altos valores nominales de corriente y tensión.
+Soportan altas corrientes y altas tensiones de bloqueo. 
+Un ejemplo de tiristores con los rectificadores controlados de silicio (SCR).
+
+Para que conduzcan se los debe polarizar en directa y deben recibir una corriente de puerta. 
 Al entrar en conducción no es necesaria la señal de puerta para mantener la corriente de ánodo. 
 El SCR continuará conduciendo siempre que la corriente de ánodo sea positiva y esté por arriba de un valor mínimo. 
-Mediante conmutadores controlados como los SCR se controla la tensión de salida en un rango limitado de variación, ajustando el ángulo de disparo de cada SCR. 
+Mediante conmutadores controlados como los SCR se controla la tensión de salida en un rango limitado de variación,
+ajustando el ángulo de disparo de cada SCR. 
 El ángulo de disparo es el intervalo angular entre la polarización directa del SCR y la aplicación de la señal de puerta. 
 Si el ángulo de disparo es 0, el comportamiento es igual al de un rectificador no controlado con diodos. 
 
 Se decidió utilizar rectificación no controlada ya que no se necesita una tensión específica a la salida
-y el costo de complejizar el diseño con el agregado de SCRs y un circuito dedicado de disparo no aporta ningún beneficio significativo.
+y el costo de complejizar el diseño con el agregado de SCRs
+y un circuito dedicado de disparo no aporta ningún beneficio significativo.
 
 \subsubsection{Simulación del circuito de control}
-Esta etapa fue la mas extensa de diseñar debido a su complejidad. Inicialmente sólo debía realimentar la tensión de salida
-y generar la señal PWM en base a ésta, pero en base a los cambios descritos en la sección \ref{subsection:estudio_bibliografia}
-se separó su diseño en tres etapas:
+Esta etapa fue la mas extensa de diseñar debido a su complejidad.
+Inicialmente sólo debía realimentar la tensión de salida del conversor DC-DC
+y generar con ella la señal PWM, pero en base a los cambios introducidos desde
+la entrega de la formulación del proyecto, su diseño se separó en tres etapas:
 
 \begin{enumerate}
     \item Compensador y generador PWM
@@ -167,7 +166,7 @@ La frecuencia de switching es definida por la frecuencia de la señal de diente 
     \label{fig:esquema_selector}
 \end{figure}
 
-Una vez diseñado el compensador, se procedió a diseñar el circuito de cambio de modo (Precarga, tensión constante y corriente constante).
+Una vez diseñado el compensador, se procedió a diseñar el circuito que alterna entre las etapas de carga (precarga, tensión constante y corriente constante).
 En la figura \ref{fig:esquema_selector} se puede observar el esquema de este circuito.
 
 Las señales de tensión y corriente están normalizadas con respecto a sus valores nominales.
@@ -211,13 +210,13 @@ El modelo actual es un modelo dinámico donde los valores de los componentes no 
 sino que dependen de las condiciones de funcionamiento de la batería: estado de carga y funcionamiento en carga o descarga.
 
 El circuito de la izquierda modela la resistencia interna de la batería y el comportamiento transitorio ante distintas cargas.
-Por otro lado, el circuito de la derecha modela la capacidad de almacenamiento de energía de la batería y la carga almacenada durante los procesos de carga o descarga \cite{bateria}.
+Por otro lado, el circuito de la derecha modela la capacidad de almacenamiento de energía de la batería y la carga almacenada durante los procesos de carga o descarga \cite{modelo_bateria_1}.
 
 Respecto al segundo modelo se agregan los siguientes componentes:
 \begin{itemize}
     \item Los bloques compuestos por una resistencia y un capacitor en paralelo, que modelan la capacidad en los electrodos de las celdas y
     la resistencia no lineal entre electrodos y electrolito.
-    En conjunto modelan las constantes de tiempo corta y larga de la respuesta transitoria de la tensión en la batería\cite{bateria_espanol}.
+    En conjunto modelan las constantes de tiempo corta y larga de la respuesta transitoria de la tensión en la batería\cite{modelo_bateria_2}.
     \item La fuente de tensión controlada por tensión, que representa la dependencia no lineal entre el estado de carga ($SOC$)
     y la tensión de circuito abierto($V_{OC}$) dependiente del $SOC$.
     \item La fuente de corriente controlada por corriente, representando la corriente de carga que modifica el $SOC$.
@@ -234,9 +233,10 @@ La resistencia en paralelo modela la autodescarga de la batería.
 
 \subsection{Tareas a realizar}
 Habiendo implementado cada una de las etapas de carga para todo el rango de variación de la tensión de entrada y los siete modos disponibles, 
-aún queda pendiente el diseño del circuito de protección contra cortocircuitos y el LED indicador de estado. 
+aún queda pendiente el diseño del circuito de protección contra cortocircuitos y el LED indicador de estado.  
 
-Para la segunda parte del proyecto se diseñará un circuito impreso y se construirá un prototipo funcional que cumpla con las especificaciones propuestas. 
+En la segunda parte del proyecto se diseñará un circuito impreso y se construirá un prototipo funcional que cumpla con las especificaciones propuestas. 
 Debido a que el costo de una batería de litio de las características necesarias es elevado,
 se evaluará la posibilidad de realizarlo a escala con una batería de menor tensión y/o capacidad.
 Una vez terminado el proceso de diseño e implementación, se verificará que el prototipo cumpla con las especificaciones presentadas.
+Para la validación experimental del prototipo se requerirá una batería de litio con BMS integrado. 
