--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{enumitem}
 \usepackage{float}
 \usepackage{subcaption}
+\usepackage{lscape}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
@@ -43,8 +44,10 @@
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
 %\input{sections/factibilidad.tex}
-\input{sections/resultados_e_indicadores.tex} % ORDENAR
+%\input{sections/resultados_e_indicadores.tex} % ORDENAR
 \input{sections/cronograma.tex}
+
+%\input{sections/apendice.tex}
 
 \newpage
 \printbibliography
