--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{float}
 \usepackage{subcaption}
 \usepackage{lscape}
+\usepackage{geometry}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
@@ -47,7 +48,7 @@
 %\input{sections/resultados_e_indicadores.tex} % ORDENAR
 \input{sections/cronograma.tex}
 
-%\input{sections/apendice.tex}
+\input{sections/apendice.tex}
 
 \newpage
 \printbibliography
