--- a/sections/cronograma.tex
+++ b/sections/cronograma.tex
@@ -1,6 +1,6 @@
 \section{Cronograma}
-El proyecto se realizará en siete (7) meses. A continuación, se presenta un esquema de las tareas
-a desarrollar y sus tiempos correspondientes.
+El proyecto se desarrollará en siete (7) meses. A continuación, se presenta un esquema de las tareas realizadas y por realizar 
+junto a sus tiempos correspondientes.
 \begin{figure}[H]
     \begin{center}
         \begin{ganttchart}[y unit title=0.8cm,
@@ -28,8 +28,8 @@ a desarrollar y sus tiempos correspondientes.
             \gantttitle{Nov}{4} \\
 
             %tareas
-            \ganttbar[progress=90]{Diseño e investigación}{1}{10} \\
-            \ganttbar[progress=80]{Informe parcial}{9}{11} \\
+            \ganttbar[progress=100]{Diseño e investigación}{1}{10} \\
+            \ganttbar[progress=100]{Informe parcial}{9}{11} \\
             \ganttbar[progress=0]{Implementación}{11}{18} \\
             \ganttbar[progress=0]{Validación}{16}{21} \\
             \ganttbar[progress=0]{Informe final}{21}{28}
