--- a/sections/apendice.tex
+++ b/sections/apendice.tex
@@ -1,16 +1,18 @@
 \newpage
-\begin{landscape}
+\newgeometry{left=3cm,right=1.5cm,top=1cm,bottom=1.5cm}
 \appendix
+\begin{landscape}
 \begin{center}
     \bfseries\LARGE Apéndice \par
 \end{center}
-\section{Capturas de las simulaciones}
 
 % Insertar imagen de la simulación de la etapa de carga
-\begin{figure}[htb]
+\begin{figure}[hbt]
     \centering
-    \includegraphics[width=\textwidth]{images/carga_completa_step.png}
-    \caption{Simulación de la etapa de carga}
+    \includegraphics[width=\linewidth]{images/carga_completa_step.png}
+    \caption{Simulación de las etapas de carga para todos los modos de corriente}
     \label{fig:simulacion_carga}
 \end{figure}
+    
 \end{landscape}
+\restoregeometry
