--- a/sections/objetivos.tex
+++ b/sections/objetivos.tex
@@ -9,6 +9,6 @@ Para lograrlo, el cargador deberá:
 \begin{itemize}
     \item Contar con un selector que permita elegir la capacidad de la batería que se desea cargar, regulando de manera acorde la corriente de salida.
     \item Recargar las celdas que componen a la batería, siguiendo un perfil de carga establecido en el proceso de diseño.
-    \item Proteger a la batería en caso de un cortocircuito, cortando la alimentación y notificando al usuario mediante el LED indicador.
-    \item Garantizar fiabilidad sin generar daños en la batería.
+    \item Proteger a la batería en caso de un cortocircuito, cortando la alimentación y notificando al usuario mediante un LED indicador.
+    \item Garantizar fiabilidad sin dañar la batería.
 \end{itemize}
