Creación de la sección bitácora

--- a/main.tex
+++ b/main.tex
@@ -44,9 +44,7 @@
 \input{sections/resumen.tex}
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
-%\input{sections/factibilidad.tex}
-%\input{sections/resultados_e_indicadores.tex} % ORDENAR
-\input{sections/cronograma.tex}
+\input{sections/bitacora.tex}
 
 \input{sections/apendice.tex}
 
