--- a/sections/Marco Teorico.tex
+++ b/sections/Marco Teorico.tex
@@ -1,5 +1,6 @@
 \section{Marco teórico}
- 
+
+Para reducir el tamaño del transformador y cumplir con las especificaciones normalmente se requieren conversiones de etapas múltiples.
 Las fuentes de potencia otorgan una alta densidad de potencia en un tamaño y con un peso reducido.  
 Permiten aislar eléctricamente a la carga de la red de alimentación. 
 Dirección controlada del flujo de potencia. 
@@ -24,13 +25,14 @@ Los tamaños del transformador y del filtro de salida se reducen debido a la alt
 Aptas para carga y descarga de baterías donde el flujo de potencia es bidireccional. 
 El flujo de potencia depende de la tensión de entrada, de la tensión de salida y de la relación de vueltas del transformador. 
 Permiten que la corriente inductiva fluya en cualquier dirección y que el flujo de corriente se vuelve continuo.
+Requiere sintetizar las funciones de conmutación para obtener las formas de onda de salida deseadas.
 
 Especificaciones de la tensión de salida del prototipo: 12.6VDC
 Para seleccionar una topología adecuada para una aplicación, es necesario comprender las ventajas y desventajas de cada topología y los requisitos de la aplicación. 
 Existen diversas topologías, las cuales serán analizadas en orden creciente de complejidad. 
 Aunque la mayoría de los convertidores se pueden utilizar para cumplir con los requerimientos de salida, 
 los valores nominales del dispositivo de conmutación y el tamaño del transformador limitan sus aplicaciones a una potencia de salida específica. 
-La elección del convertidor depende del requisito de potencia de salida.
+La elección del convertidor depende del requisito de potencia de salida y de la complejidad que se desea afrontar.
 
 
 Conversor Forward
